added recipe details

--- a/templates/display.html
+++ b/templates/display.html
@@ -145,7 +145,7 @@
     <div style='color: #616cff; text-align: center; font-size: 20px;'>
     <b>Ingredients List</b>
     
-    <p style='color: #616cff; text-align: left; border: solid 1px; margin: 10px 600px 10px 600px; padding-left: 10px;'> {% autoescape false %}{{all_receipe['inlist'] | replace("\n", "<br/>")}}{% endautoescape %}</p>
+    <p style='color: #616cff; text-align: center; border: solid 1px; margin: 10px 600px 10px 600px; padding-left: 10px;'> {% autoescape false %}{{all_receipe['inlist'] | replace("\n", "<br/>")}}{% endautoescape %}</p>
     <br/>
     <div style='color: teal;'>
     <b>Instructions</b>
